# Combined-Project

./: README.md  myscript.sh  script.sh
StrokeAggregatorLabeller-master/: inputs.js
labeler/: input.js.save  inputs.js
labeler/01_17_2021/: Ind_architecture_AST_01_norm_rough_apost.scap  Ind_architecture_TU_02_norm_rough_apost.scap  Ind_fashion_HF_02_norm_rough_apost.scap  Ind_fashion_ML_05_norm_rough_apost.scap  Ind_product_AS_15_norm_rough_apost.scap  Ind_product_PM_12_norm_rough_apost.scap  Professional1_tubes_view1_presentation_apost.scap  Professional3_house_view2_presentation_result_angle_apost.scap
labeler/01_2021/: Professional1_tubes_view1_presentation_result_angle_apost.scap  Professional2_mouse_view1_presentation_result_angle_apost.scap  Professional2_shampoo_bottle_view2_presentation_result_angle_apost.scap  Professional2_vacuum_cleaner_view1_presentation_result_angle_apost.scap  Professional3_house_view1_presentation_result_angle_apost.scap  character02_apost.scap  hair_apost.scap
labeler/01_20_2021/: shell_apost.scap
labeler/01_25_2021/: 11sketch_apost.scap
labeler/01_26_2021/: Ind_fashion_LB_01_norm_rough_apost.scap
labeler/0512/: Bunny08fxd01c.scap  GOEagle03.scap  Penguinfxd01.scap  TriceratopsArtistC02fxd02.scap  ring.scap
labeler/12_2020/: Ind_product_GW_03_norm_full_apost.scap  Ind_product_GW_03_norm_full_apost_ungrouped.scap  Professional1_mixer_view1_presentation_result_angle_apost.scap  Professional1_mixer_view1_presentation_result_angle_apost_ungrouped.scap
labeler/alt_init_clusters/: 02sketch_apost.scap  04sketch_apost.scap  06sketch_apost.scap  08sketch_apost.scap  09sketch_apost.scap  Professional1_bumps_view2_presentation_apost.scap  Professional2_house_view2_concept_apost.scap  Professional3_mouse_view1_presentation_apost.scap  fruit_apost.scap  hamstertoon_apost.scap  hand1_apost.scap  mug_apost.scap  shesh_apost.scap  student4_potato_chip_view1_concept_apost.scap  student7_shampoo_bottle_view1_presentation_apost.scap
labeler/aug_data/: branch1.scap  branch2.scap  branch3.scap  branch4.scap  branch5.scap  branch6.scap  branch7.scap  branch8.scap  branch9.scap
labeler/data/: 02sketch_t_m_result_cluster.scap  03sketch_t_m_result_cluster.scap  04sketch_t_m_result_cluster.scap  05sketch_t_m_result_cluster.scap  06sketch_t_m_result_cluster.scap  08sketch_t_m_result_cluster.scap  09sketch_t_m_result_cluster.scap  11sketch_t_m_result_cluster.scap  Cglass.scap  Crab.scap  Professional1_hairdryer_view1_concept_t_m_result_cluster.scap  Professional1_mixer_view2_presentation_t_m_result_cluster.scap  Professional2_house_view2_concept_t_m_result_cluster.scap  Professional2_house_view2_presentation_t_m_result_cluster.scap  Professional3_potato_chip_view1_concept_t_m_result_cluster.scap  Professional3_potato_chip_view1_presentation_t_m_result_cluster.scap  Riya_hindi_310s_cleaned.scap  Sho_bengali.scap  bengali_ko.scap  clock_c_1_u_1_h_t_result_proximity.scap  dyo_bengali.scap  shivam_pencil.scap  (+9 more)
strokeaggregator/: README.txt
strokestrip/: CMakeLists.txt  FindGUROBI.cmake
strokestrip/examples/letters/: def_SA_cluster.scap
strokestrip/examples/study_inputs/: Cglass_210s_cleaned.scap  Flower03_SA_cluster.scap  Giraffe_232s_cleaned.scap  Riya_hindi_501s_cleaned.scap  Sho_bengali_94s_cleaned.scap  abc_SA_cluster.scap  dyo_bengali_92s_cleaned.scap  ipadsvg.scap  ipadsvg_66s_cleaned.scap  jkl_SA_cluster.scap  seen_urdu_449s_cleaned.scap  shivam_pencil_552s_cleaned.scap  student_house.scap  test_label.scap  yz_SA_cluster.scap
(+496 files in other folders)
